Cleanup; add *really* basic protocol